docs(proxy): Minor updates to intial docs

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -5,9 +5,9 @@ description: Learn how to proxy the Clerk Frontend API through your domain.
 
 # Proxying the Clerk Frontend API
 
-Clerk supports two methods for configuring the Clerk Frontend API: CNAME and Proxy. 
+Clerk supports two configuration methods for connecting to the Clerk Frontend API: CNAME and Proxy
 
-CNAME is the simplest way to configure the Frontend API but, if you're unable to use the CNAME approach, or would like more control over your integration with Clerk, you can use a proxy.
+Setting up CNAME records and using DNS is the simplest way. However, if you're unable to use the CNAME approach, or would like more control over your integration with Clerk, you can use a proxy.
 
 When using a proxy, all requests to the Frontend API will be made through your domain. This allows you to use your own SSL certificate, and gives you more control over how you configure your application.
 
@@ -22,7 +22,9 @@ To get started, you need to create an Application from the [Clerk Dashboard](htt
 
 ### Configure your proxy server
 
-For this example, we've chosen `/__clerk` as the path for our proxy. You can choose any path you'd like, but it must be unique and not conflict with any other routes in your application.
+For this example, we've chosen `/__clerk` as the path for our proxy. Your proxy server must be on the same domain as your application. 
+
+You can choose any path you'd like, but it must be unique and not conflict with any other routes in your application.
 
 #### Required attributes
 
@@ -69,7 +71,7 @@ When enabling proxying, you must provide the path of your proxy relative to the 
     The request below will update the domain to use the proxy URL `https://app.dev/__clerk`. In doing so, it will trigger checks to validate the proxy URL.
 
     ```bash
-    curl -X POST https://api.clerk.dev/v1/domains/{{DOMAIN ID}} \
+    curl -X PATCH https://api.clerk.dev/v1/domains/{{DOMAIN ID}} \
         -H "Authorization: Bearer {{SECRET KEY}}" \
         -H "Content-Type: application/json" \
         -d '{"proxy_url": "https://app.dev/__clerk"}}'
