docs(proxy): Clean up

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -100,7 +100,7 @@ You can choose any path you'd like, but it must be unique and not conflict with 
   </Tab>
 </Tabs>
 
-<Callout type="info">Every proxy configuration will be different and we're here to help. Please reach out to support@clerk.com if there's a specific use-case you're looking to solve.</Callout>
+<Callout type="info">Every proxy configuration will be different and we're here to help. Please reach out if there's a specific use-case you're looking to solve.</Callout>
 
 ### Enable Proxying
 
@@ -111,8 +111,7 @@ When enabling proxying, you must provide the path of your proxy relative to the 
     1. Go to [your Clerk dashboard](https://dashboard.clerk.com/) and navigate to the **Domains** page.
     2. Navigate to the **Frontend API** section.
     3. Click on **Advanced**.
-    4. Enter your proxy URL in the **Proxy URL** field.
-      - The proxy URL must be a valid URL and resolve correctly.
+    4. Enter your proxy URL in the **Proxy URL** field. (The proxy URL must be a valid URL and resolve correctly.)
   </Tab>
 
   <Tab>
@@ -127,7 +126,9 @@ When enabling proxying, you must provide the path of your proxy relative to the 
   </Tab>
 </Tabs>
 
-### Configure your proxy setup with environment variables
+### Configure your proxy setup
+
+#### Configuration with environment variables
 
 <InjectKeys>
   <CodeBlockTabs options={["Next.js", "Remix", 'Gatsby']}>
@@ -153,7 +154,7 @@ When enabling proxying, you must provide the path of your proxy relative to the 
   </CodeBlockTabs>
 </InjectKeys>
 
-### Configure your proxy setup with properties
+#### Configuration with properties
 
 You can skip this step if you configured your proxy setup with environment variables.
 
