--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -7,7 +7,7 @@ description: Learn how to proxy the Clerk Frontend API through your domain.
 
 Clerk supports two configuration methods for connecting to the Clerk Frontend API: CNAME and Proxy
 
-Setting up CNAME records and using DNS is the simplest way. However, if you're unable to use the CNAME approach, or would like more control over your integration with Clerk, you can use a proxy.
+Setting up CNAME records and using DNS is the simplest way. However, if you're unable to use this approach, or would like more control over your integration with Clerk, you can use a proxy.
 
 When using a proxy, all requests to the Frontend API will be made through your domain. This allows you to use your own SSL certificate, and gives you more control over how you configure your application.
 
@@ -26,10 +26,12 @@ For this example, we've chosen `/__clerk` as the path for our proxy. Your proxy 
 
 You can choose any path you'd like, but it must be unique and not conflict with any other routes in your application.
 
-#### Required attributes
+#### Requirements
 
-- Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-api.clerk.dev/*` with the body and all headers intact.
-- Three additional headers must be set:
+Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-api.clerk.dev/*` with the body and all headers intact.
+
+##### Three additional headers must be set:
+
   - `Clerk-Proxy-Url`: Needs to have the full proxy URL.
   - `Clerk-Secret-Key`: The secret key for your Clerk instance.
   - `X-Forwarded-For`: The IP address of the original client making the request.
@@ -128,91 +130,93 @@ When enabling proxying, you must provide the path of your proxy relative to the 
 
 ### Configure your proxy setup
 
-#### Configuration with environment variables
 
-<InjectKeys>
-  <CodeBlockTabs options={["Next.js", "Remix", 'Gatsby']}>
-    ```env filename=".env.local"
-    NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
-    CLERK_SECRET_KEY={{secret}}
+<Tabs items={['Environment Variables', 'Properties']}>
+  <Tab>
+    <InjectKeys>
+      <CodeBlockTabs options={["Next.js", "Remix", 'Gatsby']}>
+        ```env filename=".env.local"
+        NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
+        CLERK_SECRET_KEY={{secret}}
 
-    NEXT_PUBLIC_CLERK_PROXY_URL=https://app.dev/__clerk
-    ```
-    ```env filename=".env"
-    CLERK_PUBLISHABLE_KEY={{pub_key}}
-    CLERK_SECRET_KEY={{secret}}
+        NEXT_PUBLIC_CLERK_PROXY_URL=https://app.dev/__clerk
+        ```
+        ```env filename=".env"
+        CLERK_PUBLISHABLE_KEY={{pub_key}}
+        CLERK_SECRET_KEY={{secret}}
 
-    CLERK_PROXY_URL=https://app.dev/__clerk
-    ```
+        CLERK_PROXY_URL=https://app.dev/__clerk
+        ```
 
-    ```env filename=".env.development"
-    CLERK_PUBLISHABLE_KEY={{pub_key}}
-    CLERK_SECRET_KEY={{secret}}
+        ```env filename=".env.development"
+        CLERK_PUBLISHABLE_KEY={{pub_key}}
+        CLERK_SECRET_KEY={{secret}}
 
-    CLERK_PROXY_URL=https://app.dev/__clerk
-    ```
-  </CodeBlockTabs>
-</InjectKeys>
+        CLERK_PROXY_URL=https://app.dev/__clerk
+        ```
+      </CodeBlockTabs>
+    </InjectKeys>
+  </Tab>
+  <Tab>
+    You can skip this step if you configured your proxy setup with environment variables.
 
-#### Configuration with properties
+    This is an alternative configuration to the environment variable based setup that we described in the previous step.
 
-You can skip this step if you configured your proxy setup with environment variables.
+    <CodeBlockTabs options={['Next.js', 'Remix', 'JavaScript']}>
+      ```tsx filename="_app.tsx"
+        import { ClerkProvider } from "@clerk/nextjs";
+        import Head from "next/head";
 
-This is an alternative configuration to the environment variable based setup that we described in the previous step.
+        export default function App({ Component, pageProps }) {
+          return (
+            <ClerkProvider proxyUrl='https://app.dev/__clerk' {...pageProps}>
+              <Head>
+                <title>Proxy Next.js app</title>
+                <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+              </Head>
+              <Component {...pageProps} />
+            </ClerkProvider>
+          );
+        }
+      ```
 
-<CodeBlockTabs options={['Next.js', 'Remix', 'JavaScript']}>
-  ```tsx filename="_app.tsx"
-    import { ClerkProvider } from "@clerk/nextjs";
-    import Head from "next/head";
+      ```tsx filename="root.tsx"
+        export const loader = (args) => {
+          return rootAuthLoader(
+            args,
+            ({ request }) => {
+              const { userId, sessionId, getToken } = request.auth;
+              return json({
+                  message: `Hello from the root loader :)`,
+                  ENV: getBrowserEnvironment(),
+              });
+            },
+            {
+              loadUser: true,
+              proxyUrl: 'https://app.dev/__clerk'
+            } as const
+          );
+        };
 
-    export default function App({ Component, pageProps }) {
-      return (
-        <ClerkProvider proxyUrl='https://app.dev/__clerk' {...pageProps}>
-          <Head>
-            <title>Proxy Next.js app</title>
-            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          </Head>
-          <Component {...pageProps} />
-        </ClerkProvider>
-      );
-    }
-  ```
-
-  ```tsx filename="root.tsx"
-    export const loader = (args) => {
-      return rootAuthLoader(
-        args,
-        ({ request }) => {
-          const { userId, sessionId, getToken } = request.auth;
-          return json({
-              message: `Hello from the root loader :)`,
-              ENV: getBrowserEnvironment(),
-          });
-        },
-        {
-          loadUser: true,
+        export default ClerkApp(App, {
           proxyUrl: 'https://app.dev/__clerk'
-        } as const
-      );
-    };
+        });
+      ```
 
-    export default ClerkApp(App, {
-      proxyUrl: 'https://app.dev/__clerk'
-    });
-  ```
+      <InjectKeys>
+        ```tsx filename="app.tsx"
+          import Clerk from '@clerk/clerk-js';
 
-  <InjectKeys>
-    ```tsx filename="app.tsx"
-      import Clerk from '@clerk/clerk-js';
-
-      const clerkFrontendApi = `{{pub_key}}`;
-      const clerk = new Clerk(clerkFrontendApi);
-      await clerk.load({
-        proxyUrl: 'https://app.dev/__clerk',
-      });
-    ```
-  </InjectKeys>
-</CodeBlockTabs>
+          const clerkFrontendApi = `{{pub_key}}`;
+          const clerk = new Clerk(clerkFrontendApi);
+          await clerk.load({
+            proxyUrl: 'https://app.dev/__clerk',
+          });
+        ```
+      </InjectKeys>
+    </CodeBlockTabs>
+  </Tab>
+</Tabs>
 
 ### Ready to go 🎉
 Your application should now be able to access Clerk's Frontend API from your proxy!
