--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -7,7 +7,7 @@ description: Learn how to proxy the Clerk Frontend API through your domain.
 
 Clerk supports two configuration methods for connecting to the Clerk Frontend API: CNAME and Proxy
 
-Setting up CNAME records and using DNS is the simplest way. However, if you're unable to use this approach, or would like more control over your integration with Clerk, you can use a proxy.
+[Setting up CNAME records and using DNS is the simplest way](/docs/deployments/overview). However, if you're unable to use this approach, or would like more control over your integration with Clerk, you can use a proxy.
 
 When using a proxy, all requests to the Frontend API will be made through your domain. This allows you to use your own SSL certificate, and gives you more control over how you configure your application.
 
@@ -76,14 +76,6 @@ Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-a
         };
       ```
 
-      ```ts filename="worker-configuration.d.ts"
-        interface Env {
-          CLERK_FAPI: string;
-          CLERK_PROXY_URL: string;
-          CLERK_SECRET_KEY: string;
-        }
-      ```
-
       ```toml filename="wrangler.toml"
         name = "cloudflare-proxy"
         main = "src/index.ts"
@@ -97,6 +89,14 @@ Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-a
         # Do not commit this file to source control
         CLERK_PROXY_URL="http://localhost:8787/__clerk"
         CLERK_SECRET_KEY="sk_test_xxxxx"
+      ```
+
+      ```ts filename="worker-configuration.d.ts"
+        interface Env {
+          CLERK_FAPI: string;
+          CLERK_PROXY_URL: string;
+          CLERK_SECRET_KEY: string;
+        }
       ```
     </CodeBlockTabs>
   </Tab>
