--- a/docs/references/react/use-auth.mdx
+++ b/docs/references/react/use-auth.mdx
@@ -12,7 +12,7 @@ The `useAuth()` hook is a convenient way to access the current auth state. This 
 <Tabs items={['Next.js', 'React']}>
   <Tab>
     ### Next.js
-    <CodeBlockTabs options={["App Router", "Page Router"]}>
+    <CodeBlockTabs options={["App Router", "Pages Router"]}>
       ```tsx filename="/app/pageWithData/clientComponent.tsx"
       "use client";
       import { useAuth } from '@clerk/nextjs';
