--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -16,7 +16,7 @@ This is a class that represents an organization. It's returned from the [`create
 | `slug` | `string \| null` | The organization slug. If supplied, it must be unique for the instance. |
 | `logoUrl` | `string \| null` | The full URL for the organization logo. (deprecated in favor of `imageUrl`) |
 | `imageUrl` | `string` | Holds the organization logo or default logo. |
-| `hasImage` | `boolean` | A getter boolean to check if the organization has a uploaded image. `false` if Clerk is displaying an avatar for the organization. |
+| `hasImage` | `boolean` | A getter boolean to check if the organization has a uploaded image. Returns `false` if Clerk is displaying an avatar for the organization. |
 | `membersCount` | `number` | The number of members the associated organization contains. |
 | `pendingInvitationsCount` | `number` | The number of pending invitations to users to join the organization. |
 | `adminDeleteEnabled` | `boolean` | A getter boolean to check if the admin of the organization can delete it. |
