--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -23,7 +23,7 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 | `fullName` | `string \| null` | The user's full name. |
 | `username` | `string \| null` | The user's username. |
 | `imageUrl` | `string` | Holds the users profile image or avatar. |
-| `hasImage` | `boolean` | A getter boolean to check if the user has uploaded an image or one was copied from OAuth. `false` if Clerk is displaying an avatar for the user. |
+| `hasImage` | `boolean` | A getter boolean to check if the user has uploaded an image or one was copied from OAuth. Returns `false` if Clerk is displaying an avatar for the user. |
 | `profileImageUrl` | `string \| null` | The URL for the user's profile image.<br />**This property is deprecated** in favor of `image_url` |
 | `primaryEmailAddress` | [`EmailAddress`][email-ref] \| `null` | Information about the user's primary email address. |
 | `primaryEmailAddressId` | `string \| null` | The unique identifier for the `EmailAddress` that the user has set as primary. |
