Added hasImage to other instances in docs

--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -112,7 +112,7 @@ Retrieves the user's session token for the given template or the default clerk t
 | --- | --- | --- |
 | `firstName` | `string \| null` | The user's first name. This attribute will only be populated if name is enabled in instance settings. |
 | `lastName` | `string \| null` | The user's last name. This attribute will only be populated if name is enabled in instance settings. |
-| `imageUrl` | `string` | The URL of the user's profile image. |
+| `imageUrl` | `string` | A getter boolean to check if the user has uploaded an image or one was copied from OAuth. Returns `false` if Clerk is displaying an avatar for the user. |
 | `hasImage` | `boolean` | Whether the user has a profile image. |
 | `identifier` | `string` | The user's identifier (email address, phone number, username, etc) that was used for authentication when this session was created. |
 
