--- a/docs/references/javascript/types/public-user-data.mdx
+++ b/docs/references/javascript/types/public-user-data.mdx
@@ -14,6 +14,6 @@ Information about the user that's publicly available.
 | `firstName` | `string \| null` | The user's first name. |
 | `lastName` | `string \| null` | The user's last name. |
 | `imageUrl` | `string` | Holds the default avatar or users uploaded profile image. |
-| `hasImage` | `boolean` | Indicates if the user has uploaded a profile image. |
+| `hasImage` | `boolean` | A getter boolean to check if the user has uploaded an image or one was copied from OAuth. Returns `false` if Clerk is displaying an avatar for the user. |
 | `identifier` | `string` | The user's identifier. |
 | `userId?` | `string \| null` | The user's ID. |
