--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -116,7 +116,9 @@ const handler = req => {
 
 ### Retry
 
-Svix will use a set schedule and retry any webhooks that fail. Please see the Svix docs for the [Retry Schedule](https://docs.svix.com/retries) to see the up-to-date schedule. If Svix is attempting and failing to send a webhook, and that endpoint is removed or disabled from the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard then the attempts will also be disabled.
+Svix will use a set schedule and retry any webhooks that fail. To see the up-to-date schedule, check out the [Svix Retry Schedule](https://docs.svix.com/retries). 
+
+If Svix is attempting and failing to send a webhook, and that endpoint is removed or disabled from the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard, then the attempts will also be disabled.
 
 ### Replay
 
