--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -122,7 +122,7 @@ If Svix is attempting and failing to send a webhook, and that endpoint is remove
 
 ### Replay
 
-If a webhook message or multiple webhook messages fail to send, you have an option to reply the webhook messages. This protects against your service having downtime or against a misconfigured endpoint. To replay webhook messages, go to the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section in your Dashboard. Select the affected Endpoint. From the 'Attempted Messages' section, locate a message you want to reply and click the menu icon on the right side and then select 'Replay'.
+If a webhook message or multiple webhook messages fail to send, you have an option to reply the webhook messages. This protects against your service having downtime or against a misconfigured endpoint. To replay webhook messages, go to the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. Select the affected Endpoint. From the **Attempted Messages** section, locate a message you want to reply  to, click the menu icon on the right side, and then select 'Replay'.
 
 <Images
   src="/docs/images/integrations/webhooks/replay-button.png"
