--- a/docs/testing/postman-or-insomnia.mdx
+++ b/docs/testing/postman-or-insomnia.mdx
@@ -38,24 +38,75 @@ await window.Clerk.session.getToken()
 ```
 
 <Images
-src="/docs/images/backend-requests/testing/get-token-from-console.png"
-width={1448}
-height={314}
-alt="Grab token from the console"
+src="/docs/images/testing/get-token-from-console.webp"
+width={1075}
+height={479}
+alt="The Dev Tools Console with the command 'await window.Clerk.session.getToken()' entered. The token is logged to the console."
 />
 
 ## Using Postman or Insomnia
 
-Open Postman/Insomnia and create a new request. In the URL field for both Postman and Insomnia enter the URL and route for the API Route you want to test. To the immediate left of the URL select the method for your API Route, or if your API Route handles multiple methods select you want to test. In the Authorization tab, select Bearer Token. Paste the token you copied from the console as the Bearer Token. Your request will now authenticate as the user you created the token with.
+<Tabs items={["Postman", "Insomnia"]}>
+<Tab>
+Open Postman and create a new request.
 
 <Images
-src="/docs/images/backend-requests/testing/protected-route.png"
-width={1338}
-height={502}
-alt="Testing a Protected Route"
+  src="/docs/images/testing/postman-new-request.webp"
+  width={2552}
+  height={1592}
+  alt="The Postman app with a red arrow pointing at the plus icon in the top left corner."
 />
 
-## Variables
+Configure Postman with the method and URL for the API Route you want to test. This example uses the `POST` method and the `/api/protected-route` route. 
 
-You can create a Collection in Postman or Insomnia, and inside of that Collection add Variables (Postman) or Environment Variable (Insomnia). These let you use the same token in multiple requests, and easily store tokens for multiple users. This is great for testing different features in your application by changing the token/user you are testing with. You can read more about Variables for [Postman here](https://learning.postman.com/docs/sending-requests/variables/) and for [Insomnia here](https://docs.insomnia.rest/insomnia/environment-variables).
+<Images
+  src="/docs/images/testing/postman-configure-request.webp"
+  width={2552}
+  height={1592}
+  alt="The Postman app with a red box around the method and URL field."
+/>
+
+Navigate to the **Authorization** tab and for token type, select **Bearer Token**. Paste the token you copied from the console as the Bearer Token. Your request will now authenticate as the user you created the token with.
+
+<Images
+  src="/docs/images/testing/postman-bearer-token.webp"
+  width={2552}
+  height={1592}
+  alt="The Postman app with the first red arrow pointing at the Authorization tab, the second red arrow pointing at the token type with 'Bearer token' chosen, and a third red arrow pointing at the token field with the token pasted in."
+/>
+</Tab>
+
+<Tab>
+Open Insomnia and create a new request. 
+
+<Images
+  src="/docs/images/testing/insomnia-new-request.webp"
+  width={2552}
+  height={1430}
+  alt="The Insomnia app with a red arrow pointing at the 'New HTTP Request' button."
+/>
+
+Configure Insomnia with the method and URL for the API Route you want to test. This example uses the `POST` method and the `/api/protected-route` route. 
+
+<Images
+  src="/docs/images/testing/insomnia-configure-request.webp"
+  width={2552}
+  height={1430}
+  alt="The Insomnia app with a red box around the method and URL field."
+/>
+
+Navigate to the **Auth** tab and click on **Auth** again to show a menu of auth types. Choose the **Bearer token** option. Paste the token you copied from the console. Your request will now authenticate as the user you created the token with.
+
+<Images
+  src="/docs/images/testing/insomnia-bearer-token.webp"
+  width={2552}
+  height={1430}
+  alt="The Insomnia app with the first red arrow pointing at the Auth tab which has been switched to the 'Bearer token' option. The second red arrow points at the token field with the token pasted in."
+/>
+</Tab>
+</Tabs>
+
+## Grouping requests
+
+Postman and Insomnia both provide a **Collections** feature, which allows you to group requests together. Inside that collection, you can add **[Variables](https://learning.postman.com/docs/sending-requests/variables/)** (Postman) or **[Environment Variables](https://docs.insomnia.rest/insomnia/environment-variables)** (Insomnia). These features enable you to use a single token across multiple requests and also allow you to store tokens for multiple users. This is great for testing different features in your application by conveniently changing the token/user you are testing with. You can read more about Postman **Variables** [here](https://learning.postman.com/docs/sending-requests/variables/) and Insomnia **Environment Variables** [here](https://docs.insomnia.rest/insomnia/environment-variables).
 
