--- a/docs/references/gatsby/with-server-auth.mdx
+++ b/docs/references/gatsby/with-server-auth.mdx
@@ -31,7 +31,7 @@ function SSRPage({ serverData }: PageProps) {
 export default SSRPage;
 ```
 
-## Props
+## Properties
 
 `withServerAuth` takes two arguments:
 
