--- a/docs/testing/postman-or-insomnia.mdx
+++ b/docs/testing/postman-or-insomnia.mdx
@@ -1,17 +1,17 @@
 ---
 title: Testing with Postman or Insomnia
-description: Learn about generating and using a long lived JWT Token with Postman or Insomnia.
+description: Learn about generating and using a long-lived JWT Token with Postman or Insomnia.
 ---
 
 # Testing with Postman or Insomnia
 
 Postman and Insomnia are powerful tools used to test API's, validate their behavior, and automate testing tasks. Basic testing with these tools is similar, and this guide will help you get started with either option.
 
-## Generate Long Lived JWT Template
+## Generate long-lived JWT Template
 
 The standard token issued by Clerk expires after 60 seconds. Clerk SDKs handle refreshing the token regularly so that the authentication state is kept up to date. Because this token expires quickly, it isn't very useful when trying to test with Postman or Insomnia.
 
-You will want to create a long lived [JWT Template](/docs/backend-requests/making/jwt-templates) to be used in Postman or Insomnia. To do so, navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) page in the Clerk Dashboard. Click on the **New template** button and select the **Blank** template.
+You will want to create a long-lived [JWT Template](/docs/backend-requests/making/jwt-templates) to be used in Postman or Insomnia. To do so, navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) page in the Clerk Dashboard. Click on the **New template** button and select the **Blank** template.
 
 <Images
   src="/docs/images/testing/blank-jwt-template.webp"
@@ -20,7 +20,7 @@ You will want to create a long lived [JWT Template](/docs/backend-requests/makin
   alt="The JWT Template page in the Clerk Dashboard. The 'New template' button was clicked, in the modal that opened, the 'Blank' template is hovered over."
 />
 
-Give your template a unique name, such as *'testing-template'*. Set the **Token Lifetime** to a value that suits your needs, or use the maximum of 315360000 seconds (10 years). If you have added custom Claims to the normal Session token, then you should add the same Claims to your JWT Template.
+Give your template a unique name, such as *'testing-template'*. Set the **Token Lifetime** to a value that suits your needs, or use the maximum of 315360000 seconds (10 years). If you added custom claims to the normal session token, then you should add the same claims to your JWT Template.
 
 <Images
   src="/docs/images/testing/testing-template.webp"
@@ -29,7 +29,7 @@ Give your template a unique name, such as *'testing-template'*. Set the **Token 
   alt="Creating a JWT Template in the Clerk Dashboard"
 />
 
-## Fetch Long Lived Token
+## Fetch long-lived token
 
 Visit your frontend that is using the same Clerk Application and instance that you want to test. Log in as a user. The user that you log in as will be the user you test with in Postman or Insomnia. You can create several tokens for several different users. Once you have logged in, open your Dev Tools and go to the **Console** tab. Enter the following command:
 
