--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -9,32 +9,45 @@ Clerk webhooks allow you to receive event notifications from Clerk. Clerk will s
 
 Clerk uses [Svix](https://svix.com/) to send our webhooks. 
 
-You can find the Webhook signing secret when you click on the endpoint you created under [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) in the Clerk dashboard.
+You can find the Webhook signing secret when you click on the endpoint you created under [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) in the Clerk Dashboard.
 
 ## Supported webhook events
 
-#### Emails
+### Emails
+
 - `email.created`
-#### Organization
+
+### Organization
+
 - `organization.created`
 - `organization.deleted`
 - `organization.updated`
-#### Organization Invitation
+
+### Organization Invitation
+
 - `organizationInvitation.accepted`
 - `organizationInvitation.created`
 - `organizationInvitation.revoked`
-#### Organization Membership
+
+### Organization Membership
+
 - `organizationMembership.created`
 - `organizationMembership.deleted`
 - `organizationMembership.updated`
-#### Session
+
+### Session
+
 - `session.created`
 - `session.ended`
 - `session.removed`
 - `session.revoked`
-#### SMS
+
+### SMS
+
 - `sms.created`
-#### User
+
+### User
+
 - `user.created`
 - `user.deleted`
 - `user.updated`
@@ -118,17 +131,17 @@ const handler = req => {
 
 Svix will use a set schedule and retry any webhooks that fail. To see the up-to-date schedule, check out the [Svix Retry Schedule](https://docs.svix.com/retries). 
 
-If Svix is attempting and failing to send a webhook, and that endpoint is removed or disabled from the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard, then the attempts will also be disabled.
+If Svix is attempting and failing to send a webhook, and that endpoint is removed or disabled from the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page of the Clerk Dashboard, then the attempts will also be disabled.
 
 ### Replay
 
-If a webhook message or multiple webhook messages fail to send, you have an option to reply the webhook messages. This protects against your service having downtime or against a misconfigured endpoint. To replay webhook messages, go to the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) section of the Clerk Dashboard. Select the affected Endpoint. From the **Attempted Messages** section, locate a message you want to reply  to, click the menu icon on the right side, and then select 'Replay'.
+If a webhook message or multiple webhook messages fail to send, you have an option to reply the webhook messages. This protects against your service having downtime or against a misconfigured endpoint. To replay webhook messages, go to the [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) page of the Clerk Dashboard. Select the affected Endpoint. From the **Attempted Messages** section, locate a message you want to reply  to, click the menu icon on the right side, and then select **Replay**.
 
 <Images
-  src="/docs/images/integrations/webhooks/replay-button.png"
-  width={1020}
-  height={664}
-  alt="The Replay option for failed webhook messages."
+  src="/docs/images/integrations/webhooks/replay-button.webp"
+  width={1640}
+  height={1144}
+  alt="The Webhooks page of the Clerk Dashboard. There is a red arrow pointing to the Replay option for a failed webhook message. There is a red box around the 'Replay' button."
 />
 
 #### Replay Options
@@ -139,13 +152,13 @@ From the Replay Messages menu, you will have 3 options.
 3. Resend all missing messages since the first failed message in that date range.
 
 <Images
-  src="/docs/images/integrations/webhooks.replay-options.png"
-  width={54}
-  height={512}
-  alt="The Replay menu, for replaying failling or missing webhook messages."
+  src="/docs/images/integrations/webhooks/replay-options.webp"
+  width={1420}
+  height={779}
+  alt="The Webhooks page of the Clerk Dashboard. The Replay menu, for replaying failling or missing webhook messages, is open and showing three options."
 />
 
 
-## How to use webhooks
+## Sync data to your database
 
 You can find a guide on how to use webhooks to sync your data to your database [here](/docs/users/sync-data).
