Resolve PR comments
Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/user-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

Update docs/components/customization/organization-profile-custom-pages.mdx

Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.c

--- a/docs/components/customization/organization-profile-custom-pages.mdx
+++ b/docs/components/customization/organization-profile-custom-pages.mdx
@@ -1,21 +1,23 @@
 ---
-title: Customize Organization Profile
-description: How to add custom pages to the `<OrganizationProfile />` component
+title: <OrganizationProfile /> customization
+description: Learn how to add custom pages and include external links within the navigation sidebar of the <OrganizationProfile /> component.
 ---
 
-# Custom pages in Organization Profile
+# `<OrganizationProfile />`
+
+The `<OrganizationProfile />` component supports the addition of custom pages and use of external links in the navigation sidebar. 
 
 ## `<OrganizationProfile.Page />`
 
-The `<OrganizationProfile />` component supports the addition of custom pages. These custom pages can be rendered inside the `<OrganizationProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
+Custom pages can be rendered inside the `<OrganizationProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
 
-To add a custom page, use the `<OrganizationProfile.Page />` component.
+To add a custom page to the `<OrganizationProfile />` component, use the `<OrganizationProfile.Page />` component.
 
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
-        `<OrganizationProfile.Page />` can be rendered **only on the client**, and in Next.js app-router projects, they need to be under the `"use client";` flag.
+        `<OrganizationProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
@@ -111,7 +113,7 @@ All props below are required.
 | --- | --- | --- |
 | `label` | `string` | The name that will be displayed in the navigation sidebar for the custom page. |
 | `labelIcon` | `React.ReactElement` | An icon displayed next to the label in the navigation sidebar. |
-| `url` | `string` | The path segment that will be used to navigate to the custom page. (e.g. if the `OrganizationProfile` component is rendered at `/organization`, then the custom page will be accessed at `/organization/{url}` when using path routing) |
+| `url` | `string` | The path segment that will be used to navigate to the custom page. (e.g. if the `OrganizationProfile` component is rendered at `/organization`, then the custom page will be accessed at `/organization/{url}` when using path routing). |
 | `children` | `React.ReactElement` | The components to be rendered as content inside the custom page. |
 
 
@@ -119,13 +121,13 @@ All props below are required.
 
 ## `<OrganizationProfile.Link />`
 
-In addition to custom pages, you can add external links to the `<OrganizationProfile />` navigation sidebar using the `<OrganizationProfile.Link />` component.
+You can add external links to the `<OrganizationProfile />` navigation sidebar using the `<OrganizationProfile.Link />` component.
 
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
-        `<OrganizationProfile.Link />` can be rendered **only on the client**, and in Next.js app-router projects, they need to be under the `"use client";` flag.
+        `<OrganizationProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
@@ -198,12 +200,12 @@ All props below are required.
 | --- | --- | --- |
 | `label` | `string` | The name that will be displayed in the navigation sidebar for the link.  |
 | `labelIcon` | `React.ReactElement` | An icon displayed next to the label in the navigation sidebar. |
-| `url` | `string` | The absolute or relative url to navigate to |
+| `url` | `string` | The absolute or relative url to navigate to. |
 
 
 ## Advanced use cases
 
-### Reordering Default Routes
+### Reordering default routes
 
 If you want to reorder the default routes (`Members` and `Settings`) in the `OrganizationProfile` navigation sidebar, you can use the `<OrganizationProfile.Page />` component with the `label` prop set to `'members'` or `'settings'`. This will target the existing default page and allow you to rearrange it.
 
@@ -211,7 +213,7 @@ If you want to reorder the default routes (`Members` and `Settings`) in the `Org
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
-        `<OrganizationProfile.Page />` and `<OrganizationProfile.Link />` can be rendered **only on the client**, and in Next.js app-router projects, they need to be under the `"use client";` flag.
+        `<OrganizationProfile.Page />` and `<OrganizationProfile.Link />` can be rendered **only on the client**.  For Next.js applications that use App Router, the `"use client";` flag needs to be used.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/organization-profile/[[...organization-profile]]/page.tsx"
@@ -306,10 +308,7 @@ The above example will result in the following order:
 3. Members
 4. Settings
 
-**Notes**
-
-- The first page in the list will be rendered under the root path `/` (its `url` will be ignored) and the Clerk pages will be rendered under the path `/organitzation-members` and `/organization-settings`.
-- The first item in the list cannot be a `<OrganizationProfile.Link />` component.
+It's important to note that the first page in the list will be rendered under the root path `/` (its `url` will be ignored) and the Clerk pages will be rendered under the path `/organitzation-members` and `/organization-settings`. Also, the first item in the list cannot be a `<OrganizationProfile.Link />` component.
 
 ### Using custom pages with the `<OrganizationSwitcher />` component
 
@@ -319,7 +318,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
-        `<OrganizationSwitcher.OrganizationProfilePage />` and `<OrganizationSwitcher.OrganizationProfileLink />` can be rendered **only on the client**, and in Next.js app-router projects, they need to be under the `"use client";` flag.
+        `<OrganizationSwitcher.OrganizationProfilePage />` and `<OrganizationSwitcher.OrganizationProfileLink />` can be rendered **only on the client**.  For Next.js applications using App Router, the `"use client";` flag must be added.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/components/Header.tsx"
