--- a/docs/components/customization/user-profile-custom-pages.mdx
+++ b/docs/components/customization/user-profile-custom-pages.mdx
@@ -1,21 +1,23 @@
 ---
-title: Customize User Profile
-description: How to add custom pages to the `<UserProfile />` component
+title: <UserProfile /> customization
+description: Learn how to add custom pages and include external links within the navigation sidebar of the <UserProfile /> component.
 ---
 
-# Custom pages in User Profile
+# `<UserProfile />` customization
+
+The `<UserProfile />` component supports the addition of custom pages and use of external links in the navigation sidebar. 
 
 ## `<UserProfile.Page />`
 
-The `<UserProfile />` component supports the addition of custom pages. These custom pages can be rendered inside the `<UserProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
+Custom pages can be rendered inside the `<UserProfile />` component and provide a way to incorporate app-specific settings or additional functionality.
 
-To add a custom page, use the `<UserProfile.Page />` component.
+To add a custom page to the `<UserProfile />` component, use the `<UserProfile.Page />` component.
 
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
-        `<UserProfile.Page />` can be rendered **only on the client**, and in Next.js app-router projects, they need to be under the `"use client";` flag.
+        `<UserProfile.Page />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
@@ -119,13 +121,13 @@ All props below are required.
 
 ## `<UserProfile.Link />`
 
-In addition to custom pages, you can add external links to the `<UserProfile />` navigation sidebar using the `<UserProfile.Link />` component.
+You can add external links to the `<UserProfile />` navigation sidebar using the `<UserProfile.Link />` component.
 
 ### Usage
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
-        `<UserProfile.Link />` can be rendered **only on the client**, and in Next.js app-router projects, they need to be under the `"use client";` flag.
+        `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
@@ -211,7 +213,7 @@ If you want to reorder the default routes (`Account` and `Security`) in the `Use
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
-        `<UserProfile.Page />` and `<UserProfile.Link />` can be rendered **only on the client**, and in Next.js app-router projects, they need to be under the `"use client";` flag.
+        `<UserProfile.Page />` and `<UserProfile.Link />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/user-profile/[[...user-profile]]/page.tsx"
@@ -306,10 +308,7 @@ The above example will result in the following order:
 3. Account
 4. Security
 
-**Notes**
-
-- The first page in the list will be rendered under the root path `/` (its `url` will be ignored) and the Clerk pages will be rendered under the path `/account`.
-- The first item in the list cannot be a `<UserProfile.Link />` component.
+It's important to note that the first page in the list will be rendered under the root path `/` (its `url` will be ignored) and the Clerk pages will be rendered under the path `/account`. Also, the first item in the list cannot be a `<UserProfile.Link />` component.
 
 ### Using custom pages with the `<UserButton />` component
 
@@ -319,7 +318,7 @@ If you are using the `<UserButton />` component with the default props (where th
 
 <Tabs items={['Next.js', 'React', 'Remix']}>
     <Tab>
-        `<UserButton.UserProfilePage />` and `<UserButton.UserProfileLink />` can be rendered **only on the client**, and in Next.js app-router projects, they need to be under the `"use client";` flag.
+        `<UserButton.UserProfilePage />` and `<UserButton.UserProfileLink />` can be rendered **only on the client**. For Next.js applications using App Router, the `"use client";` flag must be added.
 
         <CodeBlockTabs options={["App Router", "Pages Router"]}>
             ```jsx filename="/app/components/Header.tsx"
