--- a/docs/references/javascript/clerk/organization-profile.mdx
+++ b/docs/references/javascript/clerk/organization-profile.mdx
@@ -238,7 +238,8 @@ function closeOrganizationProfile(): void;
 
 ## Custom Pages
 
-Organization profile can be customized by adding custom pages to it. Custom pages are added to the organization profile using the `customPages` prop.
+You can add customized pages for the `<OrganizationProfile />` component by using the `customPages` prop.
+
 
 <CodeBlockTabs options={['NPM Module', 'window.Clerk']}>
     ```typescript {11}
