--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -3,7 +3,7 @@ title: <OrganizationProfile /> customization
 description: Learn how to add custom pages and include external links within the navigation sidebar of the <OrganizationProfile /> component.
 ---
 
-# `<OrganizationProfile />`
+# `<OrganizationProfile />` customization
 
 The `<OrganizationProfile />` component supports the addition of custom pages and use of external links in the navigation sidebar. 
 
