feat: Introduce Organization Domains (#365)

--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -5,15 +5,38 @@ description: These are all methods on the Organization class that allow you to m
 
 # Organization Invitations
 
-These are all methods on [the Organization class](/docs/references/javascript/organization/organization) that allow you to manage the invitations to an organization.
+These are all methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the invitations to an organization.
 
-## `getPendingInvitations()`
+## `getInvitations()`
+
+Retrieves a list of invitations for the currently active organization.
+
+```typescript
+function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResources<OrganizationInvitation>>;
+```
+
+### `GetInvitationsParams`
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
+| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
+| `status?` | `'pending' \| 'accepted' \| 'revoked'` | The status an invitation can have. |
+
+### Returns
+
+| Type | Description |
+| --- | --- |
+| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationInvitation][orginv-ref]\>></code> | This method returns a `Promise` which resolves with a list of [`OrganizationInvitation`][orginv-ref] objects. |
+
+
+## `getPendingInvitations()` (deprecated)
+
+Retrieves a list of organization invitations that have not yet been accepted. This method is deprecated in favor of [`getInvitations()`](#get-invitations).
 
 ```typescript
 function getPendingInvitations(params?: GetPendingInvitationsParams): Promise<OrganizationInvitation[]>;
 ```
-
-Retrieves a list of organization invitations that have not yet been accepted.
 
 ### `GetPendingInvitationsParams`
 
@@ -30,11 +53,11 @@ Retrieves a list of organization invitations that have not yet been accepted.
 
 ## `inviteMember()`
 
+Creates and sends an invitation to the target email address for becoming a member with the role passed on the function parameters.
+
 ```typescript
 function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitation>;
 ```
-
-Creates and sends an invitation to the target email address for becoming a member with the role passed on the function parameters.
 
 ### `InviteMemberParams`
 
@@ -51,11 +74,11 @@ Creates and sends an invitation to the target email address for becoming a membe
 
 ## `inviteMembers()`
 
+Creates and sends an invitation to the target email addresses for becoming a member with the role passed on the function parameters.
+
 ```typescript
 function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitation[]>;
 ```
-
-Creates and sends an invitation to the target email addresses for becoming a member with the role passed on the function parameters.
 
 ### `InviteMembersParams`
 
@@ -71,3 +94,4 @@ Creates and sends an invitation to the target email addresses for becoming a mem
 | <code>Promise\<[OrganizationInvitation][orginv-ref][]\></code> | This method returns a `Promise` which resolves to a list of [`OrganizationInvitation`][orginv-ref]s for the created invitations. |
 
 [orginv-ref]: /docs/references/javascript/organization-invitation
+[pag-res-ref]: /docs/references/javascript/types/paginated-response
