--- a/docs/references/javascript/organization/organization.mdx
+++ b/docs/references/javascript/organization/organization.mdx
@@ -28,11 +28,11 @@ This is a class that represents an organization. It's returned from the [`create
 
 ### `update()`
 
+Updates an organization's attributes.
+
 ```typescript
 function update(params: UpdateOrganizationParams): Promise<Organization>;
 ```
-
-Updates an organization's attributes.
 
 #### `UpdateOrganizationParams`
 
@@ -49,13 +49,13 @@ Updates an organization's attributes.
 
 ### `destroy()`
 
-```typescript
-function destroy(): Promise<void>;
-```
-
 Deletes the organization. Only administrators can delete an organization.
 
 Please note that deleting an organization will also delete all memberships and invitations. This is not reversible.
+
+```typescript
+function destroy(): Promise<void>;
+```
 
 #### Returns
 
@@ -65,11 +65,11 @@ Please note that deleting an organization will also delete all memberships and i
 
 ### `setLogo()`
 
+Sets or replaces an organization's logo.  Accept the logo as a file or blob. The logo must be an image and its  size cannot exceed 10MB.
+
 ```typescript
 function setLogo(params: SetOrganizationLogoParams): Promise<Organization>;
 ```
-
-Sets or replaces an organization's logo.  Accept the logo as a file or blob. The logo must be an image and its  size cannot exceed 10MB.
 
 #### `SetOrganizationLogoParams`
 
@@ -96,8 +96,13 @@ In addition to the methods listed above, the [`Organization`][org-ref] class als
 
 ### Invitations
 
-*   [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations)
+*   [`getPendingInvitations()`](/docs/references/javascript/organization/invitations#get-pending-invitations) (deprecated in favor of `getInvitations()`)
+*   [`getInvitations()`](/docs/references/javascript/organization/invitations#get-invitations)
 *   [`inviteMember()`](/docs/references/javascript/organization/invitations#invite-member)
 *   [`inviteMembers()`](/docs/references/javascript/organization/invitations#invite-members)
+
+### Domains
+*   [`getDomains()`](/docs/references/javascript/organization/domains#get-domains)
+*   [`getDomain()`](/docs/references/javascript/organization/domains#get-domain)
 
 [org-ref]: /docs/references/javascript/organization/organization
