--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -5,9 +5,9 @@ description: Learn how to proxy the Clerk Frontend API through your domain.
 
 # Proxying the Clerk Frontend API
 
-Clerk supports two configuration methods for connecting to the Clerk Frontend API: CNAME and Proxy
+Clerk supports two configuration methods for connecting to the Clerk Frontend API: CNAME and Proxy.
 
-[Setting up CNAME records and using DNS is the simplest way](/docs/deployments/overview). However, if you're unable to use this approach, or would like more control over your integration with Clerk, you can use a proxy.
+[Setting up CNAME records and using DNS is the simplest way](/docs/deployments/overview#dns-records). However, if you're unable to use this approach, or would like more control over your integration with Clerk, you can use a proxy.
 
 When using a proxy, all requests to the Frontend API will be made through your domain. This allows you to use your own SSL certificate, and gives you more control over how you configure your application.
 
@@ -18,11 +18,9 @@ When using a proxy, all requests to the Frontend API will be made through your d
 
 To get started, you need to create an Application from the [Clerk Dashboard](https://dashboard.clerk.com/). Once you create an instance via the Clerk Dashboard, you will be prompted to choose a domain. For the purposes of this guide, the domain will be `app.dev`.
 
-<Callout type="warning">Proxying is a replacement for the CNAME approach. As such, if you're using a proxy, you cannot use CNAME.</Callout>
-
 ### Configure your proxy server
 
-For this example, we've chosen `/__clerk` as the path for our proxy. Your proxy server must be on the same domain as your application. 
+For this example, we've chosen `/__clerk` as the path for our proxy. Your proxy server must be on the same domain as your application.
 
 You can choose any path you'd like, but it must be unique and not conflict with any other routes in your application.
 
@@ -50,6 +48,7 @@ Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-a
           proxy_pass https://frontend-api.clerk.dev;
           proxy_set_header Clerk-Proxy-Url https://app.dev/__clerk;
           proxy_set_header Clerk-Secret-Key sk_live_***;
+          proxy_set_header X-Forwarded-For $remote_addr;
           proxy_redirect off;
         }
       }
@@ -87,8 +86,8 @@ Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-a
 
       ```env filename=".dev.vars"
         # Do not commit this file to source control
-        CLERK_PROXY_URL="http://localhost:8787/__clerk"
-        CLERK_SECRET_KEY="sk_test_xxxxx"
+        CLERK_PROXY_URL="https://app.dev/__clerk"
+        CLERK_SECRET_KEY="sk_live_xxxxx"
       ```
 
       ```ts filename="worker-configuration.d.ts"
@@ -106,14 +105,19 @@ Requests to `https://app.dev/__clerk/*` must be forwarded to `https://frontend-a
 
 ### Enable Proxying
 
-When enabling proxying, you must provide the path of your proxy relative to the instance's domain. This URL must be valid and resolve correctly according to the required attributes listed above.
+In order to enable proxying, you need to set a proxy URL for your Clerk instance's domain.
+
+<Callout type="info">
+  To avoid downtime, your proxy must be set up according to the above configuration before it can be enabled for your instance.
+  Make sure your proxy forwards requests to the Clerk Frontend API correctly and includes the required headers.
+</Callout>
 
 <Tabs items={['Dashboard', 'Backend API']}>
   <Tab>
     1. Go to [your Clerk dashboard](https://dashboard.clerk.com/) and navigate to the **Domains** page.
     2. Navigate to the **Frontend API** section.
     3. Click on **Advanced**.
-    4. Enter your proxy URL in the **Proxy URL** field. (The proxy URL must be a valid URL and resolve correctly.)
+    4. Enter your proxy URL in the **Proxy URL** field. The proxy URL must be a valid URL and resolve correctly.
   </Tab>
 
   <Tab>
@@ -222,4 +226,4 @@ When enabling proxying, you must provide the path of your proxy relative to the 
 Your application should now be able to access Clerk's Frontend API from your proxy!
 </Steps>
 
-If you have any questions about proxies, or you're having any trouble setting this up, please contact support@clerk.com
+If you have any questions about proxying, or you're having any trouble setting this up, please contact support@clerk.com.
